--- a/assets/css/master.css
+++ b/assets/css/master.css
@@ -1,11 +1,28 @@
+body {
+  background-color: #14213d;
+  color: #ffff;
+}
+
+p {
+  font-weight: bold;
+}
+
 main {
   display: flex;
   justify-content: center;
   align-items: center;
   width: 100%;
   height: 100vh;
+  font-size: 25px;
+}
+
+.ticket {
+  display: flex;
+  border: 10px solid lightblue;
+  padding: 10px;
 }
 
 span {
+  text-align: center;
   margin: 0px 10px;
 }
