--- a/assets/css/master.css
+++ b/assets/css/master.css
@@ -1,25 +1,46 @@
 body {
-  background-color: #14213d;
-  color: #ffff;
+background-color: #ffff;
 }
 
 p {
   font-weight: bold;
 }
 
+
+
 main {
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 100%;
-  height: 100vh;
   font-size: 25px;
+  background-image: url("../img/foto.jpg");
+  width: 100%;
+}
+
+#logo {
+  width: 200px;
+}
+
+
+.bg-light{
+  background-color: #ffff!important;
+}
+
+ul li {
+  padding: 0;
+  margin: 0 10px;
 }
 
 .ticket {
+  margin-top: 400px;
+  margin-bottom: 100px;
   display: flex;
-  border: 10px solid lightblue;
+  justify-content: center;
+  display: flex;
+  border: 10px solid black;
+  border-radius: 10px;
   padding: 10px;
+  background-color: #ffff;
 }
 
 span {
