--- a/assets/css/master.css
+++ b/assets/css/master.css
@@ -7,13 +7,13 @@ p {
 }
 
 
-
 main {
   display: flex;
   justify-content: center;
   align-items: center;
   font-size: 25px;
   background-image: url("../img/foto.jpg");
+  background-position: center;
   width: 100%;
 }
 
@@ -26,14 +26,25 @@ main {
   background-color: #ffff!important;
 }
 
+ul {
+  padding-top: 20px;
+}
+
 ul li {
   padding: 0;
   margin: 0 10px;
 }
 
+a {
+  color: black;
+}
+
+a:hover {
+  color: red;
+}
 .ticket {
   margin-top: 400px;
-  margin-bottom: 100px;
+  margin-bottom: 50px;
   display: flex;
   justify-content: center;
   display: flex;
